# controllers/products.ts
@@ -1,71 +1,54 @@
 import {Category} from '../models/category';
 import {DeleteResult} from 'typeorm';
 import wrapAsync from '../middleware/requestFunctionsWrapper';
-import auth from '../middleware/auth';
-import {User, UserRole} from '../models/user';
-import {validateCategory} from '../middleware/categoryDataValidator';
 import {Product} from '../models/product';
+import auth from '../middleware/auth';
+import {isAdmin} from '../middleware/userDataValidator';
+
 
 const express = require('express');
 const router = new express.Router();
 
-// router.get('/products/:id', async (req, res) => {
-//     const selectedCategory = req.params.id;
-//     const category = await Category.createQueryBuilder('category')
-//         .where("category.id = :id", {id: selectedCategory})
-//         .leftJoinAndSelect('category.childCategories', 'subCategory')
-//         .getMany();
-//     return res.send(category);
-// });
+router.get('/products/:id', wrapAsync(async function (req, res) {
 
-router.post('/products/:category', wrapAsync(async function (req, res) {
-
-
-    const product = new Product();
-    product.name = req.body.name;
-    product.description = req.body.description;
-
-    // if (req.body.parentCategory) {
-    //     const parentCategory: Category = await Category.findOne({name: req.body.parentCategory});
-    //     if (parentCategory) {
-    //         category.parentCategory = parentCategory;
-    //     } else {
-    //         return res.status(400).send({Error: 'Not existing parent category is provided'})
-    //     }
-    // }
-    // await category.save();
-    // return res.status(201).send(category);
+    const selectedProductId = req.params.id;
+    const product = await Product.createQueryBuilder('product')
+        .where("product.id = :id", {id: selectedProductId})
+        .leftJoinAndSelect('product.categories', 'categories')
+        .getOne();
+    if (!product) return res.status(404).send({error: 'No product with provided id'});
+    return res.send(product);
 }));
 
-// router.put('/categories/:id', validateCategory, wrapAsync(async function (req, res) {
-//     const categoryToRemoveId = req.params.id;
-//     const category: Category = await Category.createQueryBuilder('category')
-//         .where("category.id = :id", {id: categoryToRemoveId})
-//         .getOne();
-//
-//     if (!category) return res.status(404).send({error: 'No category with provided id'});
-//
-//     const keysToUpdate = Object.keys(req.body);
-//     keysToUpdate.forEach((key) => category[key] = req.body[key]);
-//     const updated = await Category.save(category);
-//     res.status(200).send(updated)
-//
-// }));
-//
-// router.delete('/categories/:id', async (req, res) => {
-//     const categoryToRemoveId = req.params.id;
-//     const category: Category = await Category.createQueryBuilder('category')
-//         .where("category.id = :id", {id: categoryToRemoveId})
-//         .getOne();
-//     if (!category) {
-//         return res.status(404).send({error: 'No category with provided id'});
-//     }
-//     if (category.childCategories && category.childCategories.length > 0) {
-//         return res.status(400).send({error: 'Please remove child categories first'});
-//     }
-//     const result: DeleteResult = await Category.delete(req.params.id);
-//     res.status(200).send();
-// });
+router.put('/products/:id', auth, isAdmin, wrapAsync(async function (req, res) {
+    const selectedProductId = req.params.id;
+    const product = await Product.createQueryBuilder('product')
+        .where("product.id = :id", {id: selectedProductId})
+        .leftJoinAndSelect('product.categories', 'categories')
+        .getOne();
+    if (!product) return res.status(404).send({error: 'No product with provided id'});
+
+    const newAddedCategories: Category[] = await Category.createQueryBuilder("category")
+        .where("category.id IN (:ids)", {ids: req.body.categories})
+        .getMany();
+
+    const keysToUpdate = Object.keys(req.body);
+    keysToUpdate.forEach((key) => {
+        if (key === 'categories') {
+            product[key] = product[key].concat(newAddedCategories);
+        } else {
+            product[key] = req.body[key]
+        }
+    });
+    const updated = await Product.save(product);
+    res.status(200).send(updated)
+
+}));
+
+router.delete('/products/:id', auth, isAdmin, async (req, res) => {
+    const result: DeleteResult = await Product.delete(req.params.id);
+    res.status(200).send();
+});
 
 
 export default router;
